--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 SimpleAbout - Copyright (C) 2011 by Felix Wiemuth
 =================================================
-Version 0.x.x Alpha
+Version 1.0.0 Beta
 
 ---------
  License
